tests/fail/fail_redeclared.bb
<> Should fail with conflicting types.

int x
x = 7
float x
x = 4.3
